[package]
name = "test-revert-protection"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.15", features = [
    "eips",
    "full",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }

alloy-serde = { version = "0.15" }

# async
futures-util = "0.3"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
